# learn

./: .gitignore
QT/TodoApp/TodoApp/: CMakeLists.txt  mainwindow.ui
QT/qt-academy/console-app/: CMakeLists.txt  mainwindow.cpp
QT/qt-academy/quick-app/quick-app/: CMakeLists.txt  Main.qml  main.cpp
angular-official/: angular.json  package-lock.json  package.json
c/: CMakeLists.txt
c++/metropolia/: CMakeLists.txt  lab-01.cpp  lab-02b.cpp  lab-03a.cpp  lab-03b.cpp  lab-04a.cpp  lab-05a.cpp  lab-08a.cpp  lab-10a.cpp  lab-11a.cpp  lab10_main.cpp
c++/metropolia/lab-02a/: lab-02a.cpp
c++/metropolia/lab-06a/: Time.h  lab-06a.cpp
c++/metropolia/projects/finance_tracker/: Finance_Tracker.cpp  Finance_Tracker.h
c++/metropolia/test/: main.cpp
c++/todo-console/: CMakeLists.txt  main.cpp
c++/todo-console/include/: Tehtava.h  TehtavaLista.h
c++/todo-console/src/: Tehtava.cpp  TehtavaLista.cpp
c/metropolia/: ex-1  ex-1.c
cplusplus/metropolia/: lab-03a.cpp  lab-03b.cpp  lab-07a.cpp  lab-09a.cpp  lab5_main.cpp
cplusplus/metropolia/lab-02a/: xmltemperature_pohja.cpp
cplusplus/metropolia/lab-06a/: Time.cpp
cplusplus/metropolia/lab-06b/: Time.cpp  Time.h  lab-06b.cpp
cplusplus/metropolia/test/: Time.cpp  Time.h
cplusplus/voipe_cplusplus/: README.md
desing-pattern/code-camp-c#/doable-danny/: Program.cs
fellowmind/: package-lock.json  package.json
fellowmind/scripts/: Ariful_Ariful_Tech Solutions Inc..xml
html-css-vanilla-javascript/: index.html  plain-text.html
java/: Task.java  TodoAp.java
java/basic/: HelloWord.java
java/todo-backend/: pom.xml
java/todo-console/: Main.java  Task.java  TodoApp.java  TodoAppTest.java  pom.xml  tasks.txt
java/todo/TodoApp-GUI/: identifier.sqlite  pom.xml
javascript-typescript/angular-official/: README.md
javascript-typescript/fitech-aalto-university/web-soft-dev/: app.js  cp-4.md  first-web-app.js  hono.js  requests.http
javascript-typescript/nextjs/: .gitignore
javascript-typescript/nextjs/ai-chat/: package-lock.json  package.json
javascript-typescript/nextjs/ai-chat-nextjs/: package-lock.json  package.json
javascript-typescript/nextjs/ai-chatbot-main/: file.txt  package-lock.json
javascript-typescript/nextjs/chat-with-pdf/: package-lock.json  package.json
javascript-typescript/nextjs/dashboard/: package-lock.json  package.json
javascript-typescript/nextjs/next-auth/: package-lock.json  package.json
javascript-typescript/nextjs/next-auth-antonio/: next.config.mjs  package-lock.json  package.json
next-intl/: .hintrc  package-lock.json  package.json  pnpm-lock.yaml
next-intl/app/: layout.tsx
nextjs/: package-lock.json  package.json  pnpm-lock.yaml
nextjs-locale/: package-lock.json  package.json  pnpm-lock.yaml
nextjs-locale/app/: page.tsx
nextjs/app/: layout.tsx  page.tsx
outlier/: index.js  interface.js  sumArray.test.js
outlier/c++/test/test2/: CMakeLists.txt  main.cpp
outlier/python/: assesment_task1.py  assesment_task2_modified.py
python/outlier-python/: assesment_task2_original copy.py  assesment_task3_modified.py  assesment_task3_original.py
python/pytorch-tutorial/: PyTorch_Basics.ipynb
react-official/src/: App.tsx
(+191 files in other folders)
